--- a/MvcCoreApiClient/Views/Hospitales/Index.cshtml
+++ b/MvcCoreApiClient/Views/Hospitales/Index.cshtml
@@ -7,4 +7,10 @@
             Api Hospitales cliente
         </a>
     </li>
+    <li>
+        <a asp-controller="Hospitales"
+           asp-action="Servidor">
+            Api Hospitales Server
+        </a>
+    </li>
 </ul>
